# hypredrive

./: .clang-format  .gitignore  .readthedocs.yaml  CHANGELOG  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Doxyfile.in  HYPREDRV_config.h.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  build-cuda.sh  config.h  config.h.in  configure  configure.ac
.github/: lsan.supp
cmake/: HYPREDRVConfig.cmake.in  HYPREDRV_Analysis.cmake  HYPREDRV_Checks.cmake  HYPREDRV_Coverage.cmake  HYPREDRV_Data.cmake  HYPREDRV_Deps.cmake  HYPREDRV_Docs.cmake  HYPREDRV_ExportHelpers.cmake  HYPREDRV_Format.cmake  HYPREDRV_Fuzzing.cmake  HYPREDRV_Git.cmake  HYPREDRV_HYPRE.cmake  HYPREDRV_Install.cmake  HYPREDRV_Instrumentation.cmake  HYPREDRV_PackAndRunScript.cmake  HYPREDRV_Platform.cmake  HYPREDRV_RunScript.cmake  (+5 more)
examples/src/C_convdif/: CMakeLists.txt  convdif.c  gmres-air.yml  gmres-amg.yml  gmres-ilu.yml  postprocess.py  reproduce.sh
examples/src/C_darcy/: CMakeLists.txt  darcy.c  mgr_amg_strong.yml  mgr_global_ilu.yml  mgr_ilu.yml  mgr_jacobi.yml  postprocess.py  reproduce.sh
examples/src/C_elasticity/: CMakeLists.txt  amg-gmres.yml  amg-pcg.yml  elasticity.c  mgr2-gmres.yml  plot_two_material.py  postprocess.py  reproduce.sh
examples/src/C_heatflow/: CMakeLists.txt  heatflow.c  postprocess.py
examples/src/C_laplacian/: CMakeLists.txt  laplacian.c  postprocess.py
examples/src/C_lidcavity/: CMakeLists.txt  compare.sh  fgmres-amg-ilut.yml  fgmres-amg.yml  fgmres-ilu0.yml  fgmres-ilu1.yml  fgmres-ilut_1e-2.yml  fgmres-mgr-adaptive-reuse.yml  fgmres-mgr-print-system.yml  fgmres-mgr-schwarz-coarsest-iluk.yml  fgmres-mgr-schwarz-frelax-iluk.yml  fgmres-mgr-schwarz-frelax-spdirect.yml  fgmres-mgr-schwarz-grelax-iluk.yml  fgmres-mgr.yml  fgmres-schwarz-ras-iluk.yml  fgmres-schwarz-ras-spdirect.yml  gmres-mgr-tagged.yml  lidcavity.c  postprocess.py  reproduce.sh
examples/src/C_lidcavity/refOutput/: default_Re100.out  fgmres-amg-ilut.out  fgmres-amg.out  fgmres-ilu0.out  fgmres-ilu1.out  fgmres-ilut_1e-2.out  fgmres-mgr.out
examples/src/C_maxwell/: CMakeLists.txt  gmres-ras1-ilu0.yml  maxwell.c  pcg-amg.yml  pcg-ams.yml  postprocess.py  reproduce.sh
examples/src/C_poisson/: CMakeLists.txt  main.c  pcg-amg.yml
interfaces/cpp/: CMakeLists.txt  README.md
interfaces/cpp/examples/: laplacian.cpp
interfaces/cpp/include/: hypredrive.hpp
interfaces/cpp/tests/: api_coverage.txt  check_api_coverage.cmake  test_cpp_interface.cpp
interfaces/fortran/: CMakeLists.txt  README.md
interfaces/fortran/examples/: yaml_solve_mpi.f90
interfaces/fortran/examples/laplacian/: anisotropic.nml  default.nml  external_yaml.nml  laplacian.f90  solver.yml  x_2proc.nml  xy_4proc.nml  z_2proc.nml
interfaces/fortran/src/: HYPREDRV_fortran.c  hypredrive.f90
interfaces/fortran/tests/: run_check_failure.cmake  test_check_failure.f90  test_csr_mpi.f90  test_helpers.c  test_lifecycle.f90
interfaces/julia/: Artifacts.toml  CMakeLists.txt  Project.toml  README.md
interfaces/julia/binary/: README.md  bind_artifact.jl  build_tarballs.jl
interfaces/julia/examples/: darcy.jl  laplacian.jl  laplacian1d.jl
interfaces/julia/src/: HYPREDRV_julia.c  HypreDrive.jl  artifacts.jl  constants.jl
interfaces/julia/test/: darcy_compare.jl  mpi.jl  runtests.jl
interfaces/julia/test/cmake_consumer/: CMakeLists.txt  consumer.c  run_consumer.cmake
interfaces/matlab/: CMakeLists.txt  README.md
interfaces/matlab/examples/: build_elasticity.m  build_laplacian.m  elasticity.m  laplacian.m  laplacian1d.m
interfaces/matlab/src/: hypredrive.m  hypredrive_mex.c  hypredrive_options.m  hypredrive_setup.m  hypredrive_solve.m
interfaces/matlab/tests/: test_hypredrive_mex.m
interfaces/python/: CMakeLists.txt  README.md  pyproject.toml
interfaces/python/benchmarks/: README.md  common.py  compare_laplacian.py  scaling_laplacian.py
interfaces/python/examples/: darcy_mixed.py  laplacian.py  laplacian2d_seq.py
interfaces/python/examples/darcy/: darcy_mixed.py
interfaces/python/examples/laplacian/: laplacian.py  laplacian2d_seq.py
interfaces/python/src/: HYPREDRV_python.c  HYPREDRV_python.h  __init__.py  _build_info.py.in  _core.pxd  _core.pyx  _native.pxd  _native.pyx  _native_abi.h  driver.py  errors.py  options.py  result.py  session.py
interfaces/python/tests/: conftest.py  test_dofmap_mpi.py  test_dofmap_serial.py  test_initial_guess_serial.py  test_laplacian_example_mpi.py  test_options.py  test_solve_mpi.py  test_solve_serial.py
interfaces/python/tests/darcy/: test_mixed_validation.py
interfaces/python/tests/laplacian/: test_example_mpi.py
interfaces/python/tools/: prepare_flavor_build.py
python/: CMakeLists.txt  README.md  pyproject.toml
python/src/hypredrive/: __init__.py  _native.c  _native.pxd  _native.pyx  _native_abi.h  driver.py  options.py  session.py
python/tests/: conftest.py  test_options.py  test_solve_mpi.py
tests/: CMakeLists.txt  test_amg_args.c  test_args.c  test_args_mpi.c  test_comp.c  test_containers.c  test_coverage_init.c  test_dof_labels.c  test_eigspec.c  test_error.c  test_field.c  test_help.c  test_helpers.h  test_hypredrv.c  test_init_guess.c  test_krylov.c  test_linsys.c  test_linsys_print_mpi.c  test_logging.c  test_lsseq.c  test_lsseq_mpi.c  test_matrix.c  test_matrix_mpi.c  test_mgr_nested_yaml.c  test_parser.c  test_precon.c  test_presets.c  test_runtime.c  test_setmatrix_from_csr.c  test_setmatrix_from_csr_mpi.c  test_solver.c  test_solver_dispatch.c  test_solver_precon_integration.c  test_stats.c  test_utils.c  test_vector.c  test_vector_mpi.c  test_yaml.c
tests/fixtures/: ex3-mgr_Frelax_gmres.yml
tests/fuzz/: CMakeLists.txt  README.md  fuzz_common.h  fuzzing.sh  harness.c
tests/fuzz/dicts/: cli.dict  ijmatrix.dict  yaml.dict
tests/fuzz/regressions/parse/: indent-jump-node-leak.yml
tests/fuzz/seeds/solve/: bicgstab-amg.yml  bicgstab-ilu.yml  fgmres-amg.yml  gmres-ilu-configured.yml  gmres-ilu.yml  pcg-amg-scaling.yml
tests/fuzz/tools/: gen_ijmatrix_seed.py  gen_ijvector_seed.py  gen_lsseq_seed.sh  pack_multipart_seed.py
(+327 files in other folders)
